# Monitoring-System-Demo

./: README.md  docker-compose.yaml  kafka-consumer.py  kafka-producer.py  presentation.key  prometheus.yml  prometheus_dashboard.json  pyproject.toml
